--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "^8.2.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "5.0.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.2",
     "eslint": "^7.13.0",
